# DodgySquare

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2TTF.cmake  FindSDL2_image.cmake
src/: Background.cpp  Background.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Main.cpp  Player.cpp  Player.h  Timer.cpp  Timer.h
